--- a/assets/app.scss
+++ b/assets/app.scss
@@ -1,3 +1,5 @@
+$mdc-typography-font-family: unquote("-apple-system, BlinkMacSystemFont, \"Segoe UI\", Roboto, Helvetica, Arial, sans-serif, \"Apple Color Emoji\", \"Segoe UI Emoji\", \"Segoe UI Symbol\"");
+
 $mdc-theme-primary: #212121;
 $mdc-theme-secondary: #00bcd4;
 
@@ -18,17 +20,6 @@ $mdc-theme-secondary: #00bcd4;
 @import "@material/elevation/mdc-elevation";
 @import "@material/fab/mdc-fab";
 @import "@material/select/mdc-select";
-
-*, *::before, *::after {
-	box-sizing: border-box;
-}
-
-body {
-	margin:0;
-	padding:0;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-	overscroll-behavior: none;
-}
 
 .mdc-top-app-bar__navigation-icon {
 	text-decoration: none;
