--- a/views/components/drawer.pug
+++ b/views/components/drawer.pug
@@ -1,4 +1,4 @@
-aside#nav-drawer.mdc-drawer.mdc-drawer--dismissible
+aside#nav-drawer.mdc-drawer.mdc-drawer--dismissible(data-hijax="true")
 	.mdc-drawer__header.hidden-logged-out
 		.mdc-drawer__header-content.text-center
 			if user
