--- a/views/index.pug
+++ b/views/index.pug
@@ -4,6 +4,7 @@ block content
   p Home
 
 block fab
-  button.mdc-fab.mdc-fab--extended.app-fab-fixed
-    span.mdc-fab__icon.material-icons account_circle
-    span.mdc-fab__label Register
+  .hidden-logged-in
+    button.mdc-fab.mdc-fab--extended.app-fab-fixed
+      span.mdc-fab__icon.material-icons account_circle
+      span.mdc-fab__label Register
