--- a/views/wrapper.pug
+++ b/views/wrapper.pug
@@ -12,7 +12,7 @@ html
     meta(name="format-detection" content="telephone=no")
     link(rel="apple-touch-icon" href="/images/logo.png")
 
-    title= title
+    title= sitename
     if env === 'production'
       link(rel='stylesheet', href='/dist/css/userapp.min.css')
     else
@@ -26,6 +26,9 @@ html
       var cookie=(result=new RegExp('(?:^|; )responsive=([^;]*)').exec(document.cookie))?decodeURIComponent(result[1]):null;
       if(cookie){document.body.className = document.body.className + ' ' + cookie;}
 
+    #splash(style="position:fixed;top:0;left:0;right:0;bottom:0;text-align:center;background-color:#333;z-index:99999;")
+      #splash-logo
+        img(src="/images/logo.svg" height="200px" style="margin:0 auto;")
 
     include components/drawer
 
