--- a/views/components/navigation.pug
+++ b/views/components/navigation.pug
@@ -4,7 +4,7 @@ header.mdc-top-app-bar.mdc-top-app-bar--fixed
 			a.material-icons.mdc-top-app-bar__navigation-icon(href="#") menu
 
 			#page-title.mdc-top-app-bar__title(data-hijax="true")
-				span= title
+				span= title ? title : sitename
 
 			section.mdc-top-app-bar__section.mdc-top-app-bar__section--align-end.hidden-logged-out
 				.position-relative
