--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,7 +1,8 @@
 $mdc-typography-font-family: unquote("-apple-system, BlinkMacSystemFont, \"Segoe UI\", Roboto, Helvetica, Arial, sans-serif, \"Apple Color Emoji\", \"Segoe UI Emoji\", \"Segoe UI Symbol\"");
 
-$mdc-theme-primary: #212121;
-$mdc-theme-secondary: #00bcd4;
+$mdc-theme-primary: #6200ea;
+$mdc-theme-accent: #d500f9;
+$mdc-theme-hint: #1a237e;
 
 @import "@material/typography/mdc-typography";
 @import "@material/theme/mdc-theme";
