--- a/assets/stylus/behavior.styl
+++ b/assets/stylus/behavior.styl
@@ -13,6 +13,13 @@ a
 
 .top-margin
 	margin-top: 64px
+	.screen-xsmall &
+		margin-top: 56px
+
+.drawer-top
+	top: 64px
+	.screen-xsmall &
+		top: 56px
 
 section
 	margin: .5rem 0
