--- a/views/components/drawer.pug
+++ b/views/components/drawer.pug
@@ -1,4 +1,4 @@
-aside#nav-drawer.mdc-drawer.mdc-drawer--dismissible
+aside#nav-drawer.drawer-top.mdc-drawer.mdc-drawer--dismissible
 	.mdc-drawer__header.hidden-logged-out
 		#user-drawer-header.mdc-drawer__header-content.text-center(data-hijax="true")
 			div
