--- a/views/users/user-change-password.pug
+++ b/views/users/user-change-password.pug
@@ -2,13 +2,21 @@ extends ../wrapper
 
 block content
 	.page-header
-		h2 New Password
+		h2 Change Password
 				
-	form.form.form-validation(action="/api/users/password-set" method="POST" data-jsclass="formValidator,formController" data-submitter="#submitter" data-redirect="/users/login")
+	form.form.form-validation(action="/api/users/password-change" method="POST" data-jsclass="formValidator,formController" data-submitter="#submitter")
 		.reg-form-container
 			.reg-form.clear-fix.mdc-elevation--z1
-				input(type="hidden" name="token" value= token)
-					
+				
+				section.form-group
+					.mdc-text-field.mdc-text-field--with-trailing-icon
+						input.mdc-text-field__input(type="password" name="oldpassword" data-validate="required,password" data-min-length="8")
+						label.mdc-floating-label Old Password
+						.input-ok-indicator.material-icons.mdc-text-field__icon check_circle
+						.mdc-line-ripple
+					.mdc-text-field-helper-line
+						.validation-help.mdc-text-field-helper-text--persistent
+
 				section.form-group
 					.mdc-text-field.mdc-text-field--with-trailing-icon
 						input.mdc-text-field__input(type="password" name="password" data-validate="required,password" data-min-length="8")
@@ -28,7 +36,7 @@ block content
 						.validation-help.mdc-text-field-helper-text--persistent
 					
 				section.form-group.pull-right
-					a.mdc-button(href="/users/login") Cancel
+					a.mdc-button(href="/users/home") Cancel
 					button#submitter.mdc-button.mdc-button--raised(disabled) Save New Password
 					
 				.ajax-errors
