--- a/views/users/user-login.pug
+++ b/views/users/user-login.pug
@@ -26,7 +26,7 @@ block content
 						.validation-help.mdc-text-field-helper-text--persistent
 
 				section.form-group.pull-right
-					button#submitter.mdc-button.mdc-dialog__button.mdc-button--raised(disabled) Login
+					button#submitter.mdc-button.mdc-button--raised(disabled) Login
 					
 				.ajax-errors
 			
