--- a/views/users/user-password-reset.pug
+++ b/views/users/user-password-reset.pug
@@ -1,22 +1,26 @@
 extends ../wrapper
 
 block content
-	.row
-		.col-sm-1
-		.col-sm-10.content-area
-			.page-header
-				h1 Password Reset
+	
+	.page-header
+		h2 Password Reset
 				
-			form.form(action="/api/users/password-reset" method="POST" data-jsclass="formValidator,regForm" data-submitter="#submitter")
-				
-				.form-group
-					label Email Address
-					input.form-control(name="email" data-validate="required,email")
-					.validation-help
+	form.form.form-validation(action="/api/users/password-reset" method="POST" data-jsclass="formValidator,formController" data-submitter="#submitter" data-stay-on-page="true")
+		.reg-form-container
+			.reg-form.clear-fix.mdc-elevation--z1
+				section.form-group
+					.mdc-text-field.mdc-text-field--with-trailing-icon
+						input.mdc-text-field__input(name="email" data-validate="required,email")
+						label.mdc-floating-label Email Address
+						.input-ok-indicator.material-icons.mdc-text-field__icon check_circle
+						.mdc-line-ripple
+					.mdc-text-field-helper-line
+						.validation-help.mdc-text-field-helper-text--persistent
 			
-				.form-group
-					button#submitter.btn.btn-primary Save
+				section.form-group.pull-right
+					a.mdc-button(href="/users/login") Cancel
+					button#submitter.mdc-button.mdc-button--raised(disabled) Save
 					
 				.ajax-errors
 					
-		.col-sm-1
+			p.mdc-typography--caption After you click "save" we will send a message to your new email address. Follow the link in the email to complete this process.
