--- a/views/users/user-change-email.pug
+++ b/views/users/user-change-email.pug
@@ -1,29 +1,32 @@
 extends ../wrapper
 
 block content
-	.row
-		.col-sm-1
-		.col-sm-10.content-area
-			.page-header
-				h1 Change Email Address
-				
-			form.form(action="/api/users/change-email" method="POST" data-jsclass="formValidator,regForm" data-submitter="#submitter")
-				
-				.form-group
-					label New Email Address
-					input.form-control(name="email" data-validate="required,email" data-unique-endpoint= "/api/users/is-unique?field=email")
-					.validation-help
-						
-				.form-group
-					label Confirm New Email Address
-					input.form-control(name="confirm-email" data-validate="required,email" data-match="input[name='email']")
-					.validation-help
-						
-				.form-group
-					button#submitter.btn.btn-primary Save
-				
-				p After you click "save" we will send a new validation message to your new email address. Follow the link in the email to complete this process.
-					
+	.page-header
+		h2 Change Email Address
+		
+	form.form.form-validation(action="/api/users/change-email" method="POST" data-jsclass="formValidator,formController" data-submitter="#submitter")
+		.reg-form-container
+			.reg-form.clear-fix.mdc-elevation--z1
+				section.form-group
+					.mdc-text-field.mdc-text-field--with-trailing-icon
+						input.mdc-text-field__input(name="email" data-validate="required,email" data-unique-endpoint= "/api/users/is-unique?field=email")
+						label.mdc-floating-label New Email Address
+						.input-ok-indicator.material-icons.mdc-text-field__icon check_circle
+						.mdc-line-ripple
+					.mdc-text-field-helper-line
+						.validation-help.mdc-text-field-helper-text--persistent
+				section.form-group
+					.mdc-text-field.mdc-text-field--with-trailing-icon
+						input.mdc-text-field__input(name="confirm-email" data-validate="required,email" data-match="input[name='email']")
+						label.mdc-floating-label Confirm New Email Address
+						.input-ok-indicator.material-icons.mdc-text-field__icon check_circle
+						.mdc-line-ripple
+					.mdc-text-field-helper-line
+						.validation-help.mdc-text-field-helper-text--persistent
+				section.form-group.pull-right
+					a.mdc-button(href="/users/home") Cancel
+					button#submitter.mdc-button.mdc-button--raised(disabled) Save
+			
 				.ajax-errors
 					
-		.col-sm-1
+			p.mdc-typography--caption After you click "save" we will send a message to your new email address. Follow the link in the email to complete this process.
