--- a/views/users/user-settings.pug
+++ b/views/users/user-settings.pug
@@ -5,3 +5,10 @@ block content
 		h2 
 			<i class="material-icons">person</i> 
 			= user.username + ' settings'
+
+
+	p
+		a(href="/users/change-email") Change Email Address
+
+	p
+		a(href="/users/change-password") Change Password
