--- a/assets/stylus/behavior.styl
+++ b/assets/stylus/behavior.styl
@@ -104,6 +104,14 @@ input:-webkit-autofill,input:-webkit-autofill:hover, input:-webkit-autofill:focu
 	-webkit-box-shadow: 0 0 0px 1000px #fff inset
 	transition: background-color 5000s ease-in-out 0s
 
+// alerts
+.alert
+	background-color: #333
+	color: #eee
+	padding: 1em;
+	border: thin solid black
+	border-radius: 4px
+
 // form validation indicators and help prompts managed by jsclass formValidator.js
 
 .form-validation
