--- a/views/users/user-change-password.pug
+++ b/views/users/user-change-password.pug
@@ -36,7 +36,7 @@ block content
 						.validation-help.mdc-text-field-helper-text--persistent
 					
 				section.form-group.pull-right
-					a.mdc-button(href="/users/home") Cancel
+					a.mdc-button(href="/users/settings") Cancel
 					button#submitter.mdc-button.mdc-button--raised(disabled) Save New Password
 					
 				.ajax-errors
