--- a/views/users/user-change-email.pug
+++ b/views/users/user-change-email.pug
@@ -24,7 +24,7 @@ block content
 					.mdc-text-field-helper-line
 						.validation-help.mdc-text-field-helper-text--persistent
 				section.form-group.pull-right
-					a.mdc-button(href="/users/home") Cancel
+					a.mdc-button(href="/users/settings") Cancel
 					button#submitter.mdc-button.mdc-button--raised(disabled) Save
 			
 				.ajax-errors
