validate token in /users/password-set form

--- a/views/users/user-password-reset.pug
+++ b/views/users/user-password-reset.pug
@@ -3,7 +3,7 @@ extends ../wrapper
 block content
 	
 	.page-header
-		h2 Password Reset
+		h2 Reset Password Request
 				
 	form.form.form-validation(action="/api/users/password-reset" method="POST" data-jsclass="formValidator,formController" data-submitter="#submitter" data-stay-on-page="true")
 		.reg-form-container
