--- a/views/users/user-password-set.pug
+++ b/views/users/user-password-set.pug
@@ -2,35 +2,37 @@ extends ../wrapper
 
 block content
 	.page-header
-		h2 New Password
-				
-	form.form.form-validation(action="/api/users/password-set" method="POST" data-jsclass="formValidator,formController" data-submitter="#submitter" data-redirect="/users/login")
-		.reg-form-container
-			.reg-form.clear-fix.mdc-elevation--z1
-				input(type="hidden" name="token" value= token)
+		h2 Reset Password
+		
+	if error
+		.alert.alert-error= error
+	else
 					
-				section.form-group
-					.mdc-text-field.mdc-text-field--with-trailing-icon
-						input.mdc-text-field__input(type="password" name="password" data-validate="required,password" data-min-length="8")
-						label.mdc-floating-label New Password
-						.input-ok-indicator.material-icons.mdc-text-field__icon check_circle
-						.mdc-line-ripple
-					.mdc-text-field-helper-line
-						.validation-help.mdc-text-field-helper-text--persistent
+		form.form.form-validation(action="/api/users/password-set" method="POST" data-jsclass="formValidator,formController" data-submitter="#submitter" data-redirect="/users/login")
+			.reg-form-container
+				.reg-form.clear-fix.mdc-elevation--z1
+					input(type="hidden" name="token" value= token)
 						
-				section.form-group
-					.mdc-text-field.mdc-text-field--with-trailing-icon
-						input.mdc-text-field__input(type="password" name="confirm-password" data-validate="required,password" data-match="input[name='password']" placeholder="confirm password")
-						label.mdc-floating-label Confirm New Password
-						.input-ok-indicator.material-icons.mdc-text-field__icon check_circle
-						.mdc-line-ripple
-					.mdc-text-field-helper-line
-						.validation-help.mdc-text-field-helper-text--persistent
-					
-				section.form-group.pull-right
-					a.mdc-button(href="/users/login") Cancel
-					button#submitter.mdc-button.mdc-button--raised(disabled) Save New Password
-					
-				.ajax-errors
-					
-		.col-sm-1
+					section.form-group
+						.mdc-text-field.mdc-text-field--with-trailing-icon
+							input.mdc-text-field__input(type="password" name="password" data-validate="required,password" data-min-length="8")
+							label.mdc-floating-label New Password
+							.input-ok-indicator.material-icons.mdc-text-field__icon check_circle
+							.mdc-line-ripple
+						.mdc-text-field-helper-line
+							.validation-help.mdc-text-field-helper-text--persistent
+							
+					section.form-group
+						.mdc-text-field.mdc-text-field--with-trailing-icon
+							input.mdc-text-field__input(type="password" name="confirm-password" data-validate="required,password" data-match="input[name='password']" placeholder="confirm password")
+							label.mdc-floating-label Confirm New Password
+							.input-ok-indicator.material-icons.mdc-text-field__icon check_circle
+							.mdc-line-ripple
+						.mdc-text-field-helper-line
+							.validation-help.mdc-text-field-helper-text--persistent
+						
+					section.form-group.pull-right
+						a.mdc-button(href="/users/login") Cancel
+						button#submitter.mdc-button.mdc-button--raised(disabled) Save New Password
+						
+					.ajax-errors
