--- a/assets/stylus/behavior.styl
+++ b/assets/stylus/behavior.styl
@@ -151,4 +151,5 @@ input:-webkit-autofill,input:-webkit-autofill:hover, input:-webkit-autofill:focu
 		margin: 24vh auto
 		color:#999
 		text-align: center
-		font-size: 3em
+		i
+			font-size: 10em
