--- a/views/wrapper.pug
+++ b/views/wrapper.pug
@@ -29,7 +29,7 @@ html
 
     #splash(style="position:fixed;top:0;left:0;right:0;bottom:0;text-align:center;background-color:#333;z-index:99999;")
       #splash-logo
-        img(src="/images/logo.svg" height="200px" style="margin:0 auto;")
+        i.material-icons emoji_people
 
     include components/drawer
 
