--- a/views/wrapper.pug
+++ b/views/wrapper.pug
@@ -69,4 +69,4 @@ html
       script(src="/dist/js/userapp.js")
         
     script.
-      $(document).ready(function() { boot(); });
+      boot(); 
