--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -10,6 +10,7 @@ $mdc-theme-hint: #1a237e;
 @import "@material/top-app-bar/mdc-top-app-bar";
 @import "@material/drawer/mdc-drawer";
 @import "@material/button/mdc-button";
+@import "@material/data-table/mdc-data-table";
 @import "@material/dialog/mdc-dialog";
 @import "@material/form-field/mdc-form-field";
 @import "@material/checkbox/mdc-checkbox";
