--- a/views/wrapper.pug
+++ b/views/wrapper.pug
@@ -57,7 +57,9 @@ html
     
     if options.STRIPE_PUBLIC
       // stripe for subscriptions
-      script(src="https://checkout.stripe.com/checkout.js")
+      //script(src="https://checkout.stripe.com/checkout.js")
+      script(src="https://js.stripe.com/v3/")
+
       
     if options.RECAPTCHA_PUBLIC
       // CAPTCHA for forms
