--- a/views/users/subscription.pug
+++ b/views/users/subscription.pug
@@ -21,84 +21,79 @@ block content
 					- ended = period_end;
 					- cancelled = true;
 				
-				- var end = ended ? ' <strong class="text-danger">cancelled on ' + ended + '</strong>' : '';
+				- var end = ended ? ' <strong class="highlighted">cancelled on ' + ended + '</strong>' : '';
 
-				p!= 'subscription started on <strong>' + start + '</strong>' + ' current subscription period <strong>' + period_start + '</strong> through <strong>' + period_end + '</strong>' + end
+				p!= 'Started on <strong>' + start + '</strong>' + ' current period <strong>' + period_start + '</strong> through <strong>' + period_end + '</strong>' + end
 		
+				if paymentMethod
+					p!= 'Your current <strong>' + paymentMethod.card.brand + '</strong> card ends with <strong>' + paymentMethod.card.last4 + '</strong> and expires on <strong>' + paymentMethod.card.exp_month + '/' + paymentMethod.card.exp_year + '</strong>'
+					
 			if !cancelled
 				- canSubscribe = false
-				each source in stripe.sources.data
-					- card = source.card
-					if card && source.id == stripe.default_source
-						p!= 'Your current ' + card.brand + ' card ends with <kbd>' + card.last4 + '</kbd> and expires on <kbd>' + card.exp_month + '/' + card.exp_year + '</kbd>'
-						
-				.well
+				p
 					a(href="#" data-jsclass="ajaxButton" data-endpoint='/api/users/subscription-cancel' data-method="GET" data-redirect="/users/subscription") Click Here 
 					|  to cancel your subscription at end of current period.
 					
-		.mdc-data-table
-			table.mdc-data-table__table
-				thead
-					tr.mdc-data-table__header-row
-						th.mdc-data-table__header-cell Date
-						th.mdc-data-table__header-cell Description
-						th.mdc-data-table__header-cell Start
-						th.mdc-data-table__header-cell End
-						th.mdc-data-table__header-cell Amount
-						th.mdc-data-table__header-cell Prorated
-						th.mdc-data-table__header-cell Paid
-				tbody.mdc-data-table__content
-					if (upcoming && upcoming.lines && upcoming.lines.data.length) 
-						each line in upcoming.lines.data
+		.flextable(data-jsclass="flexTable" data-break="screen-xsmall")
+			ul
+				li Description
+				li Start
+				li End
+				li Amount
+				li Paid
+			if (upcoming && upcoming.lines && upcoming.lines.data.length) 
+				each line in upcoming.lines.data
 
-							- var date = new moment(upcoming.created * 1000).format('MM/DD/YYYY')
-							- var prorate = line.proration ? '<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>' : ''
-							- var startdate = new moment(line.period.start * 1000).format('MM/DD/YYYY')
-							- var enddate = new moment(line.period.end * 1000).format('MM/DD/YYYY')
-							- var amount = line.amount / 100
-							- var description = line.plan ? line.plan.name : line.description
+					- var date = new moment(upcoming.created * 1000).format('MM/DD/YYYY')
+					- var prorate = line.proration ? '<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>' : ''
+					- var startdate = new moment(line.period.start * 1000).format('MM/DD/YYYY')
+					- var enddate = new moment(line.period.end * 1000).format('MM/DD/YYYY')
+					- var amount = line.amount / 100
+					- var description = line.plan ? line.plan.name : line.description
 
-							tr.mdc-data-table__row
-								td.mdc-data-table__cell= date
-								td.mdc-data-table__cell Next bill
-								td.mdc-data-table__cell= startdate
-								td.mdc-data-table__cell= enddate
-								td.mdc-data-table__cell
-								td.mdc-data-table__cell!= prorate
-								td.mdc-data-table__cell
+					ul
+						li = date
+						ul
+							li Next bill
+							li= startdate
+							li= enddate
+							li
+							li
 			
-					if (invoices && invoices.data && invoices.data.length) 
-						each invoice in invoices.data
-							each line in invoice.lines.data
-								- var date = new moment(invoice.created * 1000).format('MM/DD/YYYY')
-								- var prorate = line.proration ? '<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>' : ''
-								- var startdate = new moment(line.period.start * 1000).format('MM/DD/YYYY')
-								- var enddate = new moment(line.period.end * 1000).format('MM/DD/YYYY')
-								- var amount = line.amount / 100
-								- var description = line.description
-								- var paid = invoice.paid ? '<i class="material-icons" >check_circle</i>' : ''
+			if (invoices && invoices.data && invoices.data.length) 
+				each invoice in invoices.data
+					each line in invoice.lines.data
+						- var date = new moment(invoice.created * 1000).format('MM/DD/YYYY')
+						- var prorate = line.proration ? '<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>' : ''
+						- var startdate = new moment(line.period.start * 1000).format('MM/DD/YYYY')
+						- var enddate = new moment(line.period.end * 1000).format('MM/DD/YYYY')
+						- var amount = line.amount / 100
+						- var description = line.description
+						- var paid = invoice.paid ? '<i class="material-icons" >check_circle</i>' : ''
 
-								tr.mdc-data-table__row
-									td.mdc-data-table__cell= date
-									td.mdc-data-table__cell= description
-									td.mdc-data-table__cell= startdate
-									td.mdc-data-table__cell= enddate
-									td.mdc-data-table__cell.align-right= amount.toFixed(2)
-									td.mdc-data-table__cell.align-center!= prorate
-									td.mdc-data-table__cell.align-center!= paid
-				
-	if canSubscribe
-					
-		.button-container(data-jsclass="stripeClientCheckout" data-stripe-pk= options.STRIPE_PUBLIC data-host= options.PUBLIC_HOST data-user-id= user.id data-email= user.email data-plan= options.STRIPE_YEARLY)
-			button.btn.btn-primary Pay Yearly
-				
-		.button-container(data-jsclass="stripeClientCheckout" data-stripe-pk= options.STRIPE_PUBLIC data-host= options.PUBLIC_HOST data-user-id= user.id data-email= user.email data-plan= options.STRIPE_MONTHLY)
-			button.btn.btn-default Pay Monthly
-		
+						ul
+							li
+								= date
+								ul
+									li= description
+									li= startdate
+									li= enddate
+									li= amount.toFixed(2)
+									li!= paid
+
 		#error-message
 				
-	
-	pre= JSON.stringify(stripe, null, 2)
-	pre= JSON.stringify(upcoming, null, 2)
-	pre= JSON.stringify(invoices, null, 2)
+block fab
+	if canSubscribe
+		section.button-bar.mdc-fab.mdc-fab--extended.app-fab-fixed
+			| Subscribe: 
+			button.mdc-button.mdc-button--raised(data-jsclass="stripeClientCheckout" data-stripe-pk= options.STRIPE_PUBLIC data-host= options.PUBLIC_HOST data-user-id= user.id data-email= user.email data-plan= options.STRIPE_YEARLY)
+				span.mdc-button-label Yearly $10
+			button.mdc-button.mdc-button--raised(data-jsclass="stripeClientCheckout" data-stripe-pk= options.STRIPE_PUBLIC data-host= options.PUBLIC_HOST data-user-id= user.id data-email= user.email data-plan= options.STRIPE_MONTHLY)
+				span.mdc-button-label Monthly $1
+					
+	//pre= JSON.stringify(stripe, null, 2)
+	//pre= JSON.stringify(paymentMethod, null, 2)
+	//pre= JSON.stringify(upcoming, null, 2)
+	//pre= JSON.stringify(invoices, null, 2)
 	
